# dsadotpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dsadotpy/: protocols.py  search.py  sort.py  structures.py
tests/: test_search.py  test_sort.py  test_structures.py
