[project]
name = "dsadotpy"
version = "1.0.0"
authors = [
  {name = "Viktor Bachok"},
]
description = "DSA implementations in Python."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["src"]
strict = true

[tool.pytest]
testpaths = ["tests"]
